--- a/public/css/Component/CenterManager/CenterManager_Dashboard.css
+++ b/public/css/Component/CenterManager/CenterManager_Dashboard.css
@@ -1036,111 +1036,7 @@
 
     }
 
-      /* @media screen and (max-width: 1108px) {
-        .main-right-bottom {}
-
-        .main-right-bottom-one {
-            flex-direction: column;
-            height: 500px;
-
-        }
-
-        .main-right-bottom-one-left {
-            width: 90%;
-        }
-
-        .main-right-bottom-one-right {
-            width: 90%;
-        }
-
-        .main-right-bottom-one-left .left {
-            padding-top: 1%;
-        }
-
-        .main-right-bottom-one-left .left h1 {
-            margin-bottom: 5%;
-        }
-
-        .main-right-bottom-one-left .left h3 {
-            margin-bottom: 1%;
-        }
-
-        .main-right-bottom-one-left .left button {
-            margin-bottom: 5%;
-            height: 50px;
-        }
-
-        .main-right-bottom-two {
-            flex-direction: column;
-            height: auto;
-        }
-
-        .main-right-bottom-two-cont {
-            width: 90%;
-            margin: 15px;
-            height: 100px;
-        }
-
-        .main-right-bottom-three {
-            flex-direction: column;
-            width: 100%;
-            height: auto;
-        }
-
-        .main-right-bottom-three-left {
-            flex-direction: column;
-            height: auto;
-            width: 90%;
-
-        }
-
-        .main-right-bottom-three-right {
-            display: flex;
-            flex-direction: column;
-            height: auto;
-            width: 90%;
-        }
-
-        .main-right-bottom-three-right-left {
-            display: flex;
-            flex-direction: column;
-            height: auto;
-            width: 100%;
-            margin-bottom: 25px;
-        }
-
-        .main-right-bottom-three-right-right button {
-            height: 25px;
-        }
-
-
-        .map {
-            width: 90%;
-            padding-top: 2%;
-            height: 300px !important;
-            border-radius: 10px;
-            box-shadow: var(--box-shadow);
-        }
-
-        .main-right-bottom-three-right-left button {
-            height: 40px;
-        }
-    }
-
-    @media screen and (max-width: 844px) {
-        .main-right-top-notification {
-
-            margin-left: 5%;
-        }
-
-        .map {
-            width: 90%;
-            padding-top: 2%;
-            height: 300px !important;
-            border-radius: 10px;
-            box-shadow: var(--box-shadow);
-        }
-    } */
+      
 
     
 
@@ -1410,6 +1306,18 @@
 
         .calendar li{
             font-size: 8px;
+        }
+
+        .complaints-container p{
+            font-size: 12px;
+        }
+
+        .complaints-container button{
+            font-size: 11px;
+        }
+
+        .complaints-container span{
+            font-size: 14px;
         }
 
     }
