--- a/public/css/Component/Login.css
+++ b/public/css/Component/Login.css
@@ -90,7 +90,7 @@ form.sign-in-form {
 .forgot {
   margin-bottom: 15px;
   text-decoration: none;
-  margin-right: 257px;
+  margin-right: 209px;
   margin-top: 13px;
   font-size: 13px;
   color: black;
@@ -106,6 +106,7 @@ form.sign-up-form {
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-left: 90px;
 
 
 }
@@ -119,7 +120,9 @@ form.sign-up-form {
 .top h1 {
   margin-right: 30px;
 }
-
+#profile_image {
+  display: none;
+}
 .porfile-cont {
   display: flex;
   align-items: center;
@@ -132,7 +135,8 @@ form.sign-up-form {
 }
 
 .edit-profile-content-profile-container p {
-  font-size: 15px; /* Adjust the font size as needed */
+  font-size: 15px;
+  margin-top: 10px;
 }
 
 input[type=file] {
@@ -157,7 +161,7 @@ input[type=file] {
   display: flex;
   justify-content: center;
   margin-bottom: 5px;
-  margin-left: 10px;
+  margin-left: 80px;
   margin-top: 30px;
 }
 
@@ -198,49 +202,56 @@ input[type=file] {
 
 
 
+
 .input-fieldlog {
-  width: 400px;
-  height: 45px;
-  background-color: #f5f6fa;
-  margin: 5px 0;
-  border-radius: 10px;
-  display: grid;
-  grid-template-columns: 10% 90%;
-  padding: 0 .9rem;
-  border: 1px solid #b8b7b7;
-  align-items: center;
+width: 350px;
+height: 40px;
+background-color: #f5f6fa;
+margin-bottom: 2px;
+border-radius: 10px;
+display: grid;
+display: flex; 
+align-items: center;
+grid-template-columns: 10% 90%;
+padding: 0 .9rem;
+border: 1px solid #b8b7b7;
+align-items: center;
+margin-top: 1px;
 
 }
 
 .input-fieldlog i {
-  text-align: center;
-  line-height: 55px;
-  color: #acacac;
-  font-size: 1.1rem;
+text-align: center;
+line-height: 55px;
+color: #acacac;
+font-size: 1.1rem;
+margin-right: 20px;
 
 }
 
 .input-fieldlog input {
-  background: none;
-  outline: none;
-  border: none;
-  line-height: 1;
-  font-weight: 200;
-  font-size: 1rem;
-  color: #333;
+background: none;
+outline: none;
+border: none;
+line-height: 1;
+font-weight: 200;
+font-size: 1rem;
+color: #333;
+margin-top: 6px;
 
 }
 
 .input-fieldlog input::placeholder {
-  color: #8d8d8d;
-  font-weight: 500;
-  padding-left: 20px;
-  align-self: center;
+color: #8d8d8d;
+font-weight: 500;
+padding-left: 20px;
+align-self: center;
 }
 
+
 .input-field {
-  width: 285px;
-  height: 40px;
+  width: 325px;
+  height: 38px;
   background-color: #f5f6fa;
   margin-bottom: 1px;
   border-radius: 10px;
@@ -277,8 +288,8 @@ input[type=file] {
 
 
 .input-field2 {
-  width: 285px;
-  height: 40px;
+  width: 325px;
+  height: 38px;
   background-color: #f5f6fa;
   margin-bottom: 1px;
   border-radius: 10px;
@@ -317,8 +328,8 @@ input[type=file] {
 
 .city {
 
-  width: 610px;
-  height: 40px;
+  width: 670px;
+  height: 38px;
   background-color: #f5f6fa;
   margin: 10px 0;
   border-radius: 10px;
@@ -394,6 +405,7 @@ input[type=file] {
 .cont-region {
   margin-top: 3px;
   margin-bottom: 4px;
+  margin-left: 59px;
 }
 
 .cont {
@@ -427,9 +439,32 @@ input[type=file] {
   font-weight: 600;
   margin: 10px 0;
   transition: .5s;
+  font-size: 17px;
 }
 
 .btn:hover {
+  background-color: #34cc78;
+}
+
+
+.btn1 {
+  width: 200px;
+  height: 40px;
+  border: none;
+  outline: none;
+  border-radius: 7px;
+  cursor: pointer;
+  background-color: #19954e;
+  color: #fff;
+  text-transform: uppercase;
+  font-weight: 600;
+  margin-left: 70px;
+  transition: .5s;
+  font-size: 17px;
+  margin-top: 20px;
+}
+
+.btn1:hover {
   background-color: #34cc78;
 }
 
