--- a/public/css/Component/Customer/Customer_Analatics.css
+++ b/public/css/Component/Customer/Customer_Analatics.css
@@ -106,6 +106,7 @@
                     border-radius: 7px;
                     box-sizing: border-box;
                     background-color: var(--background-color-right);
+                    color: var(--main-text-color);
                 }
 
                 label {
@@ -132,8 +133,8 @@
         button {
             padding: 6px 25px;
             font-size: 15px;
-            background-color: #1ca557;
-            color: #fff;
+            background-color: var(--green-color-one);
+            color: var(--background-color-main);
             border: none;
             border-radius: 5px;
             cursor: pointer;
@@ -141,10 +142,12 @@
             letter-spacing: 0.03rem;
             margin-bottom: 15px;
             margin-right: 15px;
+
         }
 
         button:hover {
             background-color: #0d834b;
+            color: white;
         }
 
         button:focus {
@@ -754,6 +757,40 @@
         .top-bar-left {
             display: none !important;
             background-color: #0d834b;
+        }
+    }
+
+    @media screen and (max-width: 510px) {
+
+
+        .main-right-top-two {
+
+            .top-bar {
+                .date-box {
+                    justify-content: space-around;
+                    margin-left: 0%;
+                }
+
+                .date-box-cont {
+
+                    input {
+                        padding: 6px 1px !important;
+                        font-size: 12px;
+                    }
+
+                    p {
+                        font-size: 14px;
+                    }
+                }
+            }
+
+            button {
+                padding: 4px 18px;
+                font-size: 14px;
+                background-color: var(--green-color-one);
+                color: var(--background-color-main);
+            }
+
         }
     }
 }
