--- a/public/css/Component/Customer/Customer_Complain_History.css
+++ b/public/css/Component/Customer/Customer_Complain_History.css
@@ -29,11 +29,11 @@
 
     @media screen and (max-width:700px) {
         .table-header {
-            grid-template-columns: 15% 20% 15% 20% 30%;
+            grid-template-columns: 15% 20% 20% 30%;
         }
 
         .table-row {
-            grid-template-columns: 15% 20% 15% 20% 30%;
+            grid-template-columns: 15% 20% 20% 30%;
         }
     }
 
