--- a/public/css/Component/Customer/Customer_Complains.css
+++ b/public/css/Component/Customer/Customer_Complains.css
@@ -182,7 +182,7 @@
             font-size: 14px;
             font-weight: 500;
             margin-bottom: 5px;
-            color: #F13E3E;
+            color: var(--red-color);
         }
 
         .main-bottom-component-left-button {
@@ -350,8 +350,8 @@
                 height: 90%;
             }
 
-            .main-bottom-component-left-button button{
-                margin-top: -5px;
+            .main-bottom-component-left-button button {
+                margin-top: 25px;
                 height: 25px !important;
             }
 
@@ -359,5 +359,15 @@
                 font-size: 18px;
             }
         }
+
+        @media screen and (max-width: 540px) {
+            .main-bottom-component-left-topic h2 {
+                font-size: 15px;
+
+            }
+        }
+
+
+
     }
 }
