--- a/public/css/Component/Customer/Customer_Discount_Agent.css
+++ b/public/css/Component/Customer/Customer_Discount_Agent.css
@@ -112,9 +112,10 @@
     .main-right-top-three-content p {
         font-size: 15px;
         padding-bottom: 5px;
-        color: var(--main-text-color);
+        color: var(--main-text-color) !important;
         letter-spacing: 0.03rem;
         margin-left: 7px;
+
     }
 
     .main-right-bottom {
@@ -233,7 +234,38 @@
             height: 28px;
             margin-left: 10px;
         }
+
+        .main-right-bottom {
+            width: 250%
+        }
     }
 
+    @media screen and (max-width:700px) {
+        .table-header {
+            grid-template-columns: 7% 7% 7% 17% 7% 12%;
+        }
+
+        .table-row {
+            grid-template-columns: 7% 7% 7% 17% 7% 12%;
+
+        }
+
+    }
+
+    @media screen and (max-width:448px) {
+        .main-right-bottom {
+            width: 270%
+        }
+
+        .table-header {
+            grid-template-columns: 7% 7% 7% 17% 7% 12%;
+        }
+
+        .table-row {
+            grid-template-columns: 7% 7% 7% 17% 7% 12%;
+
+        }
+
+    }
 
 }
