--- a/public/css/Component/Customer/Customer_Discount_Agent_View.css
+++ b/public/css/Component/Customer/Customer_Discount_Agent_View.css
@@ -81,4 +81,16 @@
         }
     }
 
+    @media screen and (max-width:700px) {
+        .table-header {
+            grid-template-columns: 7% 7% 7% 17% 7% 12%;
+        }
+
+        .table-row {
+            grid-template-columns: 7% 7% 7% 17% 7% 12%;
+
+        }
+
+    }
+
 }
