--- a/public/css/Component/Customer/Customer_Request_Ongoing.css
+++ b/public/css/Component/Customer/Customer_Request_Ongoing.css
@@ -96,7 +96,8 @@
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%) scale(0);
-        background-color: rgba(0, 0, 0, 0);
+        box-shadow: var(--box-shadow);
+        border-radius: 10px;
         z-index: 4;
         align-items: center;
         justify-content: center;
@@ -115,14 +116,12 @@
 
     .popup {
         width: 400px;
-        background: white;
-        border-radius: 10px;
+        background-color: var(--background-color-main);
+
         top: 0;
         text-align: center;
         padding: 0 30px 30px;
-        color: #333;
-        box-shadow: var(--box-shadow);
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+        color: var();
     }
 
     .popup a {
@@ -159,14 +158,14 @@
         margin-top: 30px;
         margin-right: 20px;
         padding: 10px 0;
-        background: rgb(220, 39, 39);
-        color: white;
+        background: var(--red-color);
+        color: var(--background-color-main);
         border: 0;
         outline: none;
         font-size: 18px;
         border-radius: 4px;
         cursor: pointer;
-        box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
+        box-shadow: var(--box-shadow);
     }
 
     .cancelbtn {
@@ -190,8 +189,10 @@
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%) scale(0);
-        background-color: rgba(0, 0, 0, 0);
+        background-color: var(--background-color-main);
         z-index: 4;
+        border-radius: 10px;
+        box-shadow: var(--box-shadow);
         align-items: center;
         justify-content: center;
         flex-direction: column;
@@ -220,8 +221,10 @@
         }
 
         h2 {
-            margin-top: 6%;
+            margin-top: 6.5%;
             font-size: 24px;
+            color: var(--main-text-color);
+
         }
 
         i {
@@ -234,16 +237,20 @@
         h3 {
             margin-bottom: 3%;
             font-size: 18px;
+            color: var(--main-text-color);
+
         }
 
         p {
             width: 320px;
             font-size: 14px;
+            color: var(--main-text-color);
+
         }
 
         button {
-            width: 100px;
-            height: 28px;
+            width: 125px;
+            height: 31px;
             font-size: 15px;
             border-radius: 5px;
             display: flex;
@@ -252,7 +259,7 @@
             border: none;
             margin-top: 18%;
             cursor: pointer;
-            color: white;
+            color: var(--background-color-main);
             letter-spacing: 0.02rem;
             background-color: var(--green-color-one);
         }
@@ -261,25 +268,25 @@
     /*---------------*/
     @media screen and (max-width:950px) {
         .table-header {
-            grid-template-columns: 10% 12% 10% 9% 10% 10% 13% 9%
+            grid-template-columns: 10% 12% 10% 9% 8% 10% 9% 9% 6%
         }
 
         .table-row {
-            grid-template-columns: 10% 12% 10% 9% 10% 10% 13% 9%
+            grid-template-columns: 10% 12% 10% 9% 8% 10% 9% 9% 6%
         }
     }
 
     @media screen and (max-width:580px) {
         .table-header {
-            grid-template-columns: 10% 10% 10% 9% 7% 10% 8% 9%
+            grid-template-columns: 8% 11% 10% 9% 8% 10% 7% 7% 8%
         }
 
         .table-row {
-            grid-template-columns: 10% 10% 10% 9% 7% 10% 8% 9%
+            grid-template-columns: 8% 11% 10% 9% 8% 10% 7% 7% 8%
         }
 
         .main-right-bottom {
-            width: 170%;
+            width: 180%;
             overflow-x: scroll;
         }
 
@@ -290,6 +297,100 @@
         .main-right-bottom-down {
             width: 170%;
         }
+
+
+        .verify {
+            .popup {
+                width: 310px;
+            }
+
+            h2 {
+                margin-top: 6.5%;
+                font-size: 21px;
+            }
+
+            i {
+                color: var(--green-color-one);
+                font-size: 45px;
+                margin-top: 2%;
+                margin-bottom: 2%;
+            }
+
+            h3 {
+                font-size: 15px;
+            }
+
+            p {
+                width: 320px;
+                font-size: 12px;
+            }
+
+        }
+    }
+
+    @media screen and (max-width:802px) {
+
+
+        .popup {
+            width: 350px;
+        }
+
+
+        .popup img {
+            width: 70px;
+        }
+
+        .popup h2 {
+            font-size: 18px;
+        }
+
+        .popup p {
+            font-size: 15px;
+        }
+
+
+        .deletebtn {
+            width: 100px;
+            font-size: 15px;
+        }
+
+        .cancelbtn {
+            width: 100px;
+            font-size: 15px;
+        }
+
+    }
+
+    @media screen and (max-width:466px) {
+
+
+        .popup {
+            width: 300px;
+        }
+
+
+        .popup img {
+            width: 65px;
+        }
+
+        .popup h2 {
+            font-size: 15px;
+        }
+
+        .popup p {
+            font-size: 12px;
+        }
+
+        .deletebtn {
+            width: 100px;
+            font-size: 12px;
+        }
+
+        .cancelbtn {
+            width: 100px;
+            font-size: 15px;
+        }
+
     }
 
 
